fix staff dial on IE

--- a/assets/targets/components/intranet/_staff-dial.scss
+++ b/assets/targets/components/intranet/_staff-dial.scss
@@ -8,11 +8,11 @@
 
     li {
       @include rem(margin, 10px 10px);
+      @include rem(width, 70px);
       display: inline-block;
       list-style-type: none;
       padding: 0;
       vertical-align: top;
-      width: auto;
 
       @include breakpoint(desktop) {
         @include rem(margin, 10px 28px);
@@ -24,15 +24,14 @@
       @include rem(border-radius, 4px);
       @include rem(height, 70px);
       @include rem(padding-top, 8px);
-      @include rem(width, 70px);
       @include transition(transform 0.15s);
-      // border: 1px solid currentColor;
       background-color: $highlight;
       color: $white;
       display: block;
       text-align: center;
       text-decoration: none;
       text-transform: uppercase;
+      width: 100%;
 
       &.c1 {
         background-color: #9c27b0;
@@ -63,7 +62,6 @@
       }
 
       &:hover {
-        // background-color: currentColor;
         transform: scale(1.1);
 
         svg {
@@ -76,7 +74,7 @@
       }
 
       & > div.small {
-        width: auto;
+        width: 100%;
       }
     }
   }
